# kpglibc

./: .gitignore  CMakeLists.txt  LICENSES  README.md  README_EN.md  build.sh  config.cmake.in  dependence.xml  function.sh  kpglibcver.h  kpglibcver.h.in  patch1_memcpy_kunpeng950_glibc_2_31.patch  patch2_memset_kunpeng950_glibc_2_31.patch  patch3_memcmp_kunpeng950_glibc_2_31.patch  test_mem.c  test_memcpy.c
cmake/: KPGLIBCModule.cmake  KPGLIBCUtil.cmake
docs/en/: api_reference.md  installation_guide.md  menu_kpglibc.md  quick_start.md  release_notes.md
docs/zh/: api_reference.md  installation_guide.md  menu_kpglibc.md  quick_start.md  release_notes.md
include/: kpglibc_core.h  kpglibc_type.h
src/: CMakeLists.txt
src/basic/src/: version.c
src/core_neon/: CMakeLists.txt
src/core_neon/src/: memchr.S  memcmp-neon.S  memcpy.S  memset.S  strcmp-neon.S  strcpy-neon.S
src/core_sve/: CMakeLists.txt
src/core_sve/include/: asmdefs.h  core_precomp.h
src/core_sve/src/: cpufeature.c  memchr.S  memcmp-sve.S  memcpy-sve-950.S  memcpy-sve.S  memset-sve-950.S  memset-sve.S  strcmp-sve.S  strcpy-sve.S
src/time/: CMakeLists.txt
src/time/src/: clock_gettime.c  gettimeofday.c
test/: kp_coverage.py
test/common/functest/: GetProductVer.cpp  func_clock_gettime.cpp  func_gettimeofday.cpp  func_memchr.cpp  func_memcmp.cpp  func_memcpy.cpp  func_memmove.cpp  func_memset.cpp  func_strcmp.cpp  func_strcpy.cpp
test/common/include/: mytest.h
test/common/perftest/: perf_clock_gettime.cpp  perf_gettimeofday.cpp  perf_memchr.cpp  perf_memcmp.cpp  perf_memcpy.cpp  perf_memset.cpp  perf_strcmp.cpp  perf_strcpy.cpp
test/gtest-download/: download.sh
